Updated compatibility with albumentations

--- a/Examples/Notebook disk example.ipynb
+++ b/Examples/Notebook disk example.ipynb
@@ -17,7 +17,7 @@
     "    os.makedirs(f'./Output/{stain_augmentor_method}', exist_ok=True)\n",
     "    for i in range(0,100):\n",
     "        augmenter = PASAugmentor(stain_augmentor=stain_augmentor_method,mode='Sequential', reference_matrix=i, p=1, background_removal=False)\n",
-    "        augmented_image = augmenter(source_image)\n",
+    "        augmented_image = augmenter(image=source_image)[\"image\"]\n",
     "        Image.fromarray(augmented_image).save(f'./Output/{stain_augmentor_method}/{i}.png')"
    ]
   }
