Updates to source image path

--- a/Examples/Notebook disk example.ipynb
+++ b/Examples/Notebook disk example.ipynb
@@ -12,7 +12,7 @@
     "import os\n",
     "from PASAugmentor import PASAugmentor as PASAugmentor\n",
     "\n",
-    "source_image = np.array(Image.open('./Images/SAS_21883_001-0.png'),dtype='uint8')\n",
+    "source_image = np.array(Image.open('./Images/ExampleGlomerulus.png'),dtype='uint8')\n",
     "for stain_augmentor_method in [\"PASAugmentor\", \"RandStainNA\"]:\n",
     "    os.makedirs(f'./Output/{stain_augmentor_method}', exist_ok=True)\n",
     "    for i in range(0,100):\n",
