--- a/Examples/Notebook pipeline example.ipynb
+++ b/Examples/Notebook pipeline example.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4d10fec5",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "image = np.array(Image.open('./Images/SAS_21883_001-0.png'))\n",
+    "image = np.array(Image.open('./Images/ExampleGlomerulus.png'))\n",
     "visualize(image)"
    ]
   },
